deploy: 5cee09dd94bb1c84e6a57cfe2e479314b874f33c

--- a/manifest.json
+++ b/manifest.json
@@ -2145,7 +2145,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objective.html",
-          "hash": "W4aOPedWaE/i7d/LCxu58g=="
+          "hash": "1me8CNkfxiTgGp7K9zj27w=="
         }
       },
       "is_incremental": false,
@@ -2157,7 +2157,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.ArtifactBased.ObjectiveAcquireArtifact.html",
-          "hash": "nyiGXOtqV48JXiXw6uNOdA=="
+          "hash": "Vcb8VxJofnZSEmDRRFtUew=="
         }
       },
       "is_incremental": false,
@@ -2169,7 +2169,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.ArtifactBased.ObjectiveArtifactInRect.html",
-          "hash": "mVxegaqPtn55hrdGEHRQEg=="
+          "hash": "SvIHE0eacygxXrUFQBmPhA=="
         }
       },
       "is_incremental": false,
@@ -2181,7 +2181,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.ArtifactBased.ObjectiveNoOtherPlayerGetsArtifact.html",
-          "hash": "xdKmnrEqacHMlMS2r+qGzw=="
+          "hash": "YFOU9BfFrPcBc1tgnQZSAQ=="
         }
       },
       "is_incremental": false,
@@ -2205,7 +2205,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.ControlPointBased.ObjectiveControlLevel.html",
-          "hash": "01eiofYFXC4a1QXxIHmEzA=="
+          "hash": "CODWStXGS1BfIBPMTYn09g=="
         }
       },
       "is_incremental": false,
@@ -2217,7 +2217,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.ControlPointBased.ObjectiveControlPoint.html",
-          "hash": "MbjkaF6k2Jf1jMlYXVRljA=="
+          "hash": "c9r579hPKWe0zSQoOaEHBw=="
         }
       },
       "is_incremental": false,
@@ -2229,7 +2229,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.ControlPointBased.ObjectiveControlPoints.html",
-          "hash": "YH9TbvzeaR8HNhHiINTCPQ=="
+          "hash": "U+wPE1yIwA7/8nqM8r7yAw=="
         }
       },
       "is_incremental": false,
@@ -2253,7 +2253,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveFactionContolPointAmountGreaterThan.html",
-          "hash": "Diqmieh+Vzm0zg9BgzatZw=="
+          "hash": "LHNb4Vcql/HF3XfduoDYSw=="
         }
       },
       "is_incremental": false,
@@ -2265,7 +2265,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveFactionContolPointAmountLessThan.html",
-          "hash": "YiXzRZe4FaqkTjSB1eQiSw=="
+          "hash": "GFxIxjRzxGTUpxrgz543bg=="
         }
       },
       "is_incremental": false,
@@ -2277,7 +2277,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveFactionDefeated.html",
-          "hash": "tdZJ5U14DXw1EpY30IVE4w=="
+          "hash": "zP+ff0oKbzdLZ3QG0VhydQ=="
         }
       },
       "is_incremental": false,
@@ -2289,7 +2289,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveSelfExists.html",
-          "hash": "TFogPbqFa/2TZfGeyR3oDw=="
+          "hash": "2mjJ5tUwdpx7f6BUBxp7tQ=="
         }
       },
       "is_incremental": false,
@@ -2313,7 +2313,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.NoOtherPlayerGetsCapital.html",
-          "hash": "PVdW3nf6lDi4ugcYJr8YhQ=="
+          "hash": "g3Nq4l8nbjlqj3RP+z9/QQ=="
         }
       },
       "is_incremental": false,
@@ -2325,7 +2325,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveCapitalDead.html",
-          "hash": "O7oaSesgJbY32ScB08LF1Q=="
+          "hash": "XtDwY07Wu7KpZhTimLrVSg=="
         }
       },
       "is_incremental": false,
@@ -2337,7 +2337,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveChannelRect.html",
-          "hash": "XX0YodP9fy+AD4j2xBucOg=="
+          "hash": "qGA2WlcYI+yaTOWjAewilw=="
         }
       },
       "is_incremental": false,
@@ -2349,7 +2349,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveControlCapital.html",
-          "hash": "Kk1dJdPEqO4sUfMl4xIipw=="
+          "hash": "zrteTQolWdjuUedLDSIhBw=="
         }
       },
       "is_incremental": false,
@@ -2361,7 +2361,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveControlLegend.html",
-          "hash": "NzNIhDQ6pYUjZejmxRkyjg=="
+          "hash": "6rpBhUHnefOL7K8k2FheIQ=="
         }
       },
       "is_incremental": false,
@@ -2373,7 +2373,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendDead.html",
-          "hash": "TI2fQJx7Q5Nobcm91fCf5A=="
+          "hash": "bsfbJlzGEcYJP+X7lquWvA=="
         }
       },
       "is_incremental": false,
@@ -2385,7 +2385,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendHasArtifact.html",
-          "hash": "NwUTvlPl+42APt9LSIlDfA=="
+          "hash": "XQAYOV+uee4350N3L/y5jw=="
         }
       },
       "is_incremental": false,
@@ -2397,7 +2397,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendInRect.html",
-          "hash": "Dc27y2u9LHcFaHr/iEjkcg=="
+          "hash": "4V2RKIcdxLWelLcwhz5XeQ=="
         }
       },
       "is_incremental": false,
@@ -2409,7 +2409,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendLevel.html",
-          "hash": "+js7EiRxbj+I10ZAq3kSPQ=="
+          "hash": "KXJqoLK2aIAbpmTIzaO+OA=="
         }
       },
       "is_incremental": false,
@@ -2421,7 +2421,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendMeetsLegend.html",
-          "hash": "qPAyqycSpd2WSNlMlcNbBw=="
+          "hash": "7zC+Ezr/m0i37q46lBoOaQ=="
         }
       },
       "is_incremental": false,
@@ -2433,7 +2433,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendNotPermanentlyDead.html",
-          "hash": "layLMC1h+hbKUW5gQjOtnQ=="
+          "hash": "aLNDmnR4nd4/yh9LOe88UA=="
         }
       },
       "is_incremental": false,
@@ -2445,7 +2445,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendReachRect.html",
-          "hash": "5dQ5cmm4a70bCBi1zCWflA=="
+          "hash": "grXdmMJGAWvTbKn66cxlLg=="
         }
       },
       "is_incremental": false,
@@ -2469,7 +2469,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.MetaBased.ObjectiveEitherOf.html",
-          "hash": "DT/0AP7HEH0nruASTACaAw=="
+          "hash": "kxW9DM0ZPfkxEbQ8myiU/Q=="
         }
       },
       "is_incremental": false,
@@ -2493,7 +2493,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.QuestBased.ObjectiveCompleteQuest.html",
-          "hash": "FBh4EjiDiRDbbjl4i6NMyQ=="
+          "hash": "06H6aBCqQNSjDWGcgVSwsQ=="
         }
       },
       "is_incremental": false,
@@ -2505,7 +2505,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.QuestBased.ObjectiveDontCompleteQuest.html",
-          "hash": "t1Bxuuqu4A9okNUsZvvaNg=="
+          "hash": "tLPweMlshixKzhM+KMauCA=="
         }
       },
       "is_incremental": false,
@@ -2541,7 +2541,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.TeamBased.ObjectiveTeamControlPointAmountGreaterThan.html",
-          "hash": "N0GyAHydlI1jnNgt2HTung=="
+          "hash": "LbgxAuaI9bhvtGb+HQZv8g=="
         }
       },
       "is_incremental": false,
@@ -2553,7 +2553,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.TeamBased.ObjectiveTeamControlPointAmountLessThan.html",
-          "hash": "rwwhTPPrl2xfT2xU8oJ+mQ=="
+          "hash": "+nXki/n+yIHVfXOCOWYwGg=="
         }
       },
       "is_incremental": false,
@@ -2565,7 +2565,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.TeamBased.ObjectiveTeamDefeated.html",
-          "hash": "mV22Y9T3A9bofDiEO2qqQg=="
+          "hash": "Ki48adw3ggPgJaWDoio4dg=="
         }
       },
       "is_incremental": false,
@@ -2589,7 +2589,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.TimeBased.ObjectiveExpire.html",
-          "hash": "rTzGy8/5kv5iH5UCa52gRA=="
+          "hash": "5Jxsc7YSVbX+AGjm7RJOKg=="
         }
       },
       "is_incremental": false,
@@ -2601,7 +2601,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.TimeBased.ObjectiveTime.html",
-          "hash": "WrGPfVuRfpBILupHf5Dfcg=="
+          "hash": "OdbyObG7UK+n8JQYK3mUsQ=="
         }
       },
       "is_incremental": false,
@@ -2613,7 +2613,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.TimeBased.ObjectiveTimeRandom.html",
-          "hash": "cxnRVw41oYxHhWqAirzFVw=="
+          "hash": "lvRlPn37diECIYmtTsEFkQ=="
         }
       },
       "is_incremental": false,
@@ -2637,7 +2637,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveAnyHeroWithLevelReachRect.html",
-          "hash": "sqxHG8Vug0jF/k1CCzQgLA=="
+          "hash": "d4W+2MmXWVAtewz8PisCXQ=="
         }
       },
       "is_incremental": false,
@@ -2649,7 +2649,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveAnyUnitInRect.html",
-          "hash": "3vpNxr71lp02Mi7WMYMbfw=="
+          "hash": "ynsNxFAh545s51vRbd8ETw=="
         }
       },
       "is_incremental": false,
@@ -2661,7 +2661,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveBuild.html",
-          "hash": "kFzbIaRe8aWzPgxZmy5Sbg=="
+          "hash": "p1u1TdCmZiTBfe1kiIv29g=="
         }
       },
       "is_incremental": false,
@@ -2673,7 +2673,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveBuildInRect.html",
-          "hash": "5nDUt4zgtaUM+/V7oXsqVw=="
+          "hash": "ILUm1RQqdwemdXdBO0y9JA=="
         }
       },
       "is_incremental": false,
@@ -2685,7 +2685,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveCastSpell.html",
-          "hash": "LqDdf32lmxrLjh2Mjv1PBg=="
+          "hash": "ab3+1kgM5YwAWrPVwEj+BA=="
         }
       },
       "is_incremental": false,
@@ -2697,7 +2697,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveCastSpellFromUnit.html",
-          "hash": "wqn2NjErgDRDoqf3LSSzYg=="
+          "hash": "+fx7jkzhZPhgdcuWhy+OGA=="
         }
       },
       "is_incremental": false,
@@ -2709,7 +2709,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveControlUnit.html",
-          "hash": "i/fWB0gMq9ouZMho2Fl4lA=="
+          "hash": "frlmjXlNmSvO/sljcghCpQ=="
         }
       },
       "is_incremental": false,
@@ -2721,7 +2721,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveDamagePlayer.html",
-          "hash": "7JQHvq6VT+GSpvIXs1XWKQ=="
+          "hash": "ruxQqPdNIDw4XHi/xMrD6A=="
         }
       },
       "is_incremental": false,
@@ -2733,7 +2733,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveHeroWithLevelInRect.html",
-          "hash": "q8XcZIlVuanEQT/jezygxw=="
+          "hash": "xNhLzubkWCCuMQ/KBqz/Hg=="
         }
       },
       "is_incremental": false,
@@ -2745,7 +2745,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveKillAllInArea.html",
-          "hash": "eGb2uyFnW4uMzNktDAf+ug=="
+          "hash": "+BOjuZBtjgzQtnoO+JRcvQ=="
         }
       },
       "is_incremental": false,
@@ -2757,7 +2757,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveKillUnit.html",
-          "hash": "oBqTxgrUKzAlTr7izfBZNA=="
+          "hash": "6vw7coVeLu8uSPLtxuRy2A=="
         }
       },
       "is_incremental": false,
@@ -2769,7 +2769,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveKillXUnit.html",
-          "hash": "3PVv09AEI6KwHei5qkndJA=="
+          "hash": "qifO1wjFo/QjJtf2w9w0cw=="
         }
       },
       "is_incremental": false,
@@ -2781,7 +2781,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveResearch.html",
-          "hash": "H/gY/+vAEhHn2iEKBP3xNA=="
+          "hash": "cNJZW1UdfK1ThX+BfrqFlA=="
         }
       },
       "is_incremental": false,
@@ -2793,7 +2793,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveStartSpell.html",
-          "hash": "i5QUwxqt0Saif1+463eSzw=="
+          "hash": "KdcHGbHifgrx/9PLOTPUAg=="
         }
       },
       "is_incremental": false,
@@ -2805,7 +2805,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveTrain.html",
-          "hash": "/PfoN0Ddyj27KYOJvOIQWQ=="
+          "hash": "4lRL3V7LTgii8jmvEW5OWw=="
         }
       },
       "is_incremental": false,
@@ -2817,7 +2817,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveUnitAlive.html",
-          "hash": "jeeIfrtBK0os5pGYynxwzQ=="
+          "hash": "oGhwKmQfnupVzOWQXmqVZg=="
         }
       },
       "is_incremental": false,
@@ -2829,7 +2829,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveUnitIsDead.html",
-          "hash": "QGGkepc5523s2v5jrw2Bqw=="
+          "hash": "tfA6kP0lSdKg+jSY8QWFgQ=="
         }
       },
       "is_incremental": false,
@@ -2841,7 +2841,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveUnitReachesFullHealth.html",
-          "hash": "VoAaZDs/CTOlji/QQBTsNQ=="
+          "hash": "eL9eJJEfbVwSE9driolymw=="
         }
       },
       "is_incremental": false,
@@ -2853,7 +2853,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveUpgrade.html",
-          "hash": "fb+SyCX5uW1imouN2b0OvA=="
+          "hash": "TZ3Z6oIaAguHbblcFLBGjQ=="
         }
       },
       "is_incremental": false,
@@ -5373,7 +5373,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Objectives.ObjectivePowerSource.html",
-          "hash": "iTdcqzTUnJKrnrtWYmrl6g=="
+          "hash": "UqpEK7AJN7Zhf4q9RZ0QFQ=="
         }
       },
       "is_incremental": false,
@@ -9185,6 +9185,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Setup.ShipyardBanZonesSetup.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Setup.ShipyardBanZonesSetup.html",
+          "hash": "g3sUce90azrRXQt4GMfZWA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-source/WarcraftLegacies.Source.Setup.ShoreSetup.yml",
       "output": {
         ".html": {
@@ -9489,7 +9501,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Setup.html",
-          "hash": "rkGS5uq81uNLeQ6oI8+n3w=="
+          "hash": "o0uu4Jo/X4aFF80UVDa/Bg=="
         }
       },
       "is_incremental": false,
@@ -9597,7 +9609,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "oUxUORgvke1A1Y+gK7mo/A=="
+          "hash": "9e5S9cSHS1WfOL/8bVe4uA=="
         }
       },
       "is_incremental": false,
@@ -9672,7 +9684,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 798,
+          "total_file_count": 799,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
